[package]
name = "lights"
version = "0.1.0"
authors = ["Zeeshan Ali <zeeshanak@gnome.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = { git = "https://gitlab.freedesktop.org/zeenix/zbus.git", package = "zbus" }
